# genotype_variants

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish-pypi.yml  publish_docker.yaml  validate.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
genotype_variants/: __init__.py  cli.py  create_all_maf_dataframe.py  create_duplex_simplex_dataframe.py  generate_summary_field.py  run_cmd.py
genotype_variants/commands/: __init__.py  small_variants.py
genotype_variants/utilities/: __init__.py  run_cmd.py
tests/: __init__.py  test_genotype_variants.py
tests/test_data/: C-100000-L002-d02-DUPLEX_genotyped.maf  C-100000-L002-d02-SIMPLEX-DUPLEX_genotyped copy.maf  C-100000-L002-d02-SIMPLEX_genotyped.maf  expected.maf  expected.tsv  merged.tsv  test_duplex.maf  test_simplex.maf
